--- a/otros.css
+++ b/otros.css
@@ -223,7 +223,7 @@ input:checked + .slider {
 
 .sidebar {
     width: 250px;
-    background-image: url(ima/fondo-3.jpg);
+    background-image: url(https://bucket-juan.s3.amazonaws.com/ima/fondo-3.jpg);
     background-size: cover;
     padding: 20px;
     overflow-y: auto;
@@ -249,7 +249,7 @@ input:checked + .slider {
 
 .dark-mode .sidebar {
     width: 250px;
-    background-image: url(ima/fondo-3-dark.png);
+    background-image: url(https://bucket-juan.s3.amazonaws.com/ima/fondo-3-dark.png);
     background-size: cover;
     padding: 20px;
     overflow-y: auto;
@@ -330,7 +330,7 @@ input:checked + .slider {
     font-family: righteous;
     justify-content: center;
     color: #ffffff;
-    background-image: url(ima/fondo-3.jpg);
+    background-image: url(https://bucket-juan.s3.amazonaws.com/ima/fondo-3.jpg);
     background-size: cover;
 }
 
@@ -338,7 +338,7 @@ input:checked + .slider {
     text-align: center;
     justify-content: center;
     color: #ffffff;
-    background-image: url(ima/fondo-3-dark.png);
+    background-image: url(https://bucket-juan.s3.amazonaws.com/ima/fondo-3-dark.png);
     background-size: cover;
 }
 
