--- a/ia.css
+++ b/ia.css
@@ -487,7 +487,7 @@ footer{
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url(https://bucket-juan.s3.amazonaws.com/https://bucket-juan.s3.amazonaws.com/ima/fondo-3.jpg);
+    background-image: url(https://bucket-juan.s3.amazonaws.com/ima/fondo-3.jpg);
     color: #fff;
     text-align: center;
     padding: 0 20px;
